src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>CreditRebill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6148: This field will hold the value of &quot;Is this a credit/re-bill&quot;
SFDC1-6250: Change field&apos;s name and API name per Bhanu&apos;s request</description>
        <label>Credit/Re-bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentQueue__c</fullName>
        <description>SFDC1-5943, To store the queue name the case is in. Will be populated via workflow.</description>
        <label>Current Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCareInitiated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-2005 Check if this Internal Partner case was created by the Customer Care team</description>
        <label>Customer Care Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeliveryCaseComments__c</fullName>
        <description>SFDC1-7122: Rename the &quot;Delivery Resolution Description&quot; field TO &quot;Delivery Case Comments&quot;</description>
        <inlineHelpText>Add Concise Overveiw</inlineHelpText>
        <label>Delivery Case Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DeliveryRootCause__c</fullName>
        <description>SFDC1-6250 Dependent picklist (controlling field is &quot;Loading Group Name&quot;)
SFDC1-6944: Reorder the picklist values</description>
        <label>Delivery Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LoadingGroupName__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Delivery Issue</fullName>
                </value>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Admin Request</fullName>
                </value>
                <value>
                    <fullName>Bespoke Data</fullName>
                </value>
                <value>
                    <fullName>Bitlock Issue</fullName>
                </value>
                <value>
                    <fullName>Bulk Change</fullName>
                </value>
                <value>
                    <fullName>Change of Address</fullName>
                </value>
                <value>
                    <fullName>Connect Issue</fullName>
                </value>
                <value>
                    <fullName>Contents of a Copyright Document</fullName>
                </value>
                <value>
                    <fullName>Corrupt CD/DVD</fullName>
                </value>
                <value>
                    <fullName>Corrupt Delivery</fullName>
                </value>
                <value>
                    <fullName>Custom Collections</fullName>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Delivery not Received</fullName>
                </value>
                <value>
                    <fullName>Document Issue</fullName>
                </value>
                <value>
                    <fullName>Dongle Issue</fullName>
                </value>
                <value>
                    <fullName>DVD Request</fullName>
                </value>
                <value>
                    <fullName>EDIN Issue</fullName>
                </value>
                <value>
                    <fullName>Enerdeq Issue</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Entitlement Maintenance</fullName>
                </value>
                <value>
                    <fullName>Errors on page within GRDD</fullName>
                </value>
                <value>
                    <fullName>ETA for Backorder</fullName>
                </value>
                <value>
                    <fullName>Feature Keys</fullName>
                </value>
                <value>
                    <fullName>GDS/GCS Issue</fullName>
                </value>
                <value>
                    <fullName>HS Code/Country Maintenance</fullName>
                </value>
                <value>
                    <fullName>Image Quality</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>JOC.com Entitlements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryTeamOnboarding__c</fullName>
        <description>SFDC1-7137: Creating Formula field for Implementation record type. Since there exists another field as Delivery Team, creating new field with same label, but different API</description>
        <formula>LoadingGroupOnboarding__r.DeliveryTeam__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryTeam__c</fullName>
        <description>SFDC1-6148: This field will hold the Delivery Team values
SFDC1-6944: Reorder the picklist values
SFDC1-6995: Configure field dependencies - if Team Select = Retail, only RETAIL values are available in Delivery Team</description>
        <label>Delivery Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TeamSelect__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Calgary Licensing</fullName>
                </value>
                <value>
                    <fullName>CD Distribution</fullName>
                </value>
                <value>
                    <fullName>Chemical Deliverables</fullName>
                </value>
                <value>
                    <fullName>Delivery Technical</fullName>
                </value>
                <value>
                    <fullName>EMEA Physical Delivery</fullName>
                </value>
                <value>
                    <fullName>Englewood Physical Delivery</fullName>
                </value>
                <value>
                    <fullName>Erights</fullName>
                </value>
                <value>
                    <fullName>Fekete Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>GIS Delivery</fullName>
                </value>
                <value>
                    <fullName>Global Delivery EMEA ADandM</fullName>
                </value>
                <value>
                    <fullName>Global Delivery Help Desk</fullName>
                </value>
                <value>
                    <fullName>Global Insight Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Goldfire Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>GTA Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>JOC Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>ODSP Orders</fullName>
                </value>
                <value>
                    <fullName>Online Delivery</fullName>
                </value>
                <value>
                    <fullName>Order Entitlements EM</fullName>
                </value>
                <value>
                    <fullName>Order Entitlements UK</fullName>
                </value>
                <value>
                    <fullName>PETRA Licensing</fullName>
                </value>
                <value>
                    <fullName>Premier Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Product Design</fullName>
                </value>
                <value>
                    <fullName>PSG Licensing</fullName>
                </value>
                <value>
                    <fullName>SMT Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>RETAIL-CD/DVD Fulfillment</fullName>
                </value>
                <value>
                    <fullName>RETAIL-Electronic File Mgmt Global</fullName>
                </value>
                <value>
                    <fullName>RETAIL-Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>RETAIL-Retail Purchasing</fullName>
                </value>
                <value>
                    <fullName>RETAIL-SDM1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DevelopmentSystemID__c</fullName>
        <description>SFDC1-251 This field contains the ID of the issue item associated with this case.</description>
        <inlineHelpText>Please populate System ID where applicable.</inlineHelpText>
        <label>Development System ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DevelopmentSystem__c</fullName>
        <description>SFDC1-251 This field contains the reference to the development system associated with the case.</description>
        <inlineHelpText>Please populate the development system associated with this case.</inlineHelpText>
        <label>Development System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JIRA</fullName>
                </value>
                <value>
                    <fullName>TFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoNotNotifyReason__c</fullName>
        <description>SFDC1-8914 Specify the reason why we should not send notification emails to the Case&apos;s Contact upon case open, close, reopen, etc...</description>
        <inlineHelpText>Specify the reason why we should not send notification emails to the Case&apos;s Contact upon case open, close, reopen, etc...</inlineHelpText>
        <label>Do Not Notify Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotNotify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8914: if &quot;Do Not Notify&quot; is set for a certain case, no case open, close, reopen, etc. emails should be sent to the Case Contact.</description>
        <inlineHelpText>If this box is checked, no communication emails will be sent to the Case&apos;s Contact.</inlineHelpText>
        <label>Do Not Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotSurveyReason__c</fullName>
        <description>SFDC1-251 Free form text that is required to be populated when the Do Not Survey checkbox is ticked.</description>
        <label>Do Not Survey Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DoNotSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-251 Checkbox that notifies that the contact will not be surveyed upon case completion.</description>
        <label>Do Not Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doc__c</fullName>
        <description>SFDC1-6995 Used for all RETAIL inquiries to determine the exact document number</description>
        <label>Doc #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>SFDC1-271 Required for Response Management Cases.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedResponseDate__c</fullName>
        <description>SFDC1-271 Required for Response Management Cases.</description>
        <label>Expected Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <description>SFDC1-593 This is expected Annualized 1st Year Revenue from the list of Opportunities</description>
        <label>Expected Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GEDOrderInvoice__c</fullName>
        <description>SFDC1-6995 Used for RETAIL orders out of the GED to provide either the order or invoice number</description>
        <label>GED Order/Invoice #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAlliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-846: Earlier this field used to be Channel/Partner</description>
        <inlineHelpText>This used to be Channel Partner</inlineHelpText>
        <label>Global Alliance</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected account is not a global alliance partner.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Global Alliance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Global Alliance)</relationshipLabel>
        <relationshipName>GlobalAllianceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRBusinessUnit__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>HR Business Unit</inlineHelpText>
        <label>HR Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasDeletedDuplicatedByCurrentUser__c</fullName>
        <description>SFDC1-5934, used to build List views on cases. My Deleted/Duplicated Cases</description>
        <formula>$User.Id =  PreviousOwnerUser__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Deleted/Duplicated By Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityNew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>IHS Markit Legal Entity</inlineHelpText>
        <label>IHS Markit Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IHSMarkitUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6009: IHS Markit User field holds user reference</description>
        <label>IHS Markit User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <description>SFDC1-8198 -FLAG for Case Record Types to Support Internal/External Type Concept. SFDC1-9677: Replacing Sales Support with Sales Operations</description>
        <formula>IF(
   OR(
     RecordType.DeveloperName  = &apos;SalesforceHelpdesk&apos;, 
     RecordType.DeveloperName  = &apos;SalesOperations&apos;, 
     RecordType.DeveloperName  = &apos;OrderManagement&apos;,
     RecordType.DeveloperName  = &apos;OrderManagementDeliveryHelpDesk&apos;, 
     RecordType.DeveloperName  = &apos;GDSA&apos;, 
     RecordType.DeveloperName  = &apos;JoinerTransferLeaver&apos;,
     RecordType.DeveloperName  = &apos;ContractManagement&apos;
     ), 
     true,false
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field indicates whether the case record type is an internal versus external case record type.</inlineHelpText>
        <label>IsInternal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastACFModifiedDate__c</fullName>
        <description>SFDC1-5513: Workflow rule will populate this field if certain conditions satisfy and ACF gets modified. So that when Last Modified Date for a case gets changed, and the time based workflow trigger will re-trigger.</description>
        <inlineHelpText>Last Additional Case Fields modified Date</inlineHelpText>
        <label>LastACFModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastOIDOutage__c</fullName>
        <description>SFDC1-251 Date field for the last recorded OID Outage</description>
        <label>Last OID Outage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestCaseCommentDate__c</fullName>
        <description>SFDC1-6294
Contains the latest case comment date.</description>
        <label>Latest Case Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-309 Lookup to leads</description>
        <inlineHelpText>This value will be populated when the ticket is spawned from a Lead Record</inlineHelpText>
        <label>Lead Reference</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>LeadReferenceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>Concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>System ID referencing the source record Populated at Migration</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>System reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyThreadId__c</fullName>
        <description>Field to store thread id of legacy markit cases.</description>
        <label>LegacyThreadId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinktoRedirecttoOtherSite__c</fullName>
        <description>SFDC1-6647, To review status or submit a Company Missing or Update requests Link</description>
        <formula>HYPERLINK(&quot;http://workspace.ihs.com/sites/sales/energyww/Pricing/AccountPlacements/default.aspx&quot;, &quot;Pricing&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Redirect to Other Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadingGroupName__c</fullName>
        <description>SFDC1-6250 Dependent picklist (controlling field is &quot;DeliveryTeam&quot;).
SFDC1-6944 Updating picklist values</description>
        <label>Loading Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DeliveryTeam__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisements</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>BDW Germany</fullName>
                </value>
                <value>
                    <fullName>Bracknell</fullName>
                </value>
                <value>
                    <fullName>Calgary</fullName>
                </value>
                <value>
                    <fullName>CD Distribution</fullName>
                </value>
                <value>
                    <fullName>Cengage Andover</fullName>
                </value>
                <value>
                    <fullName>Cengage Fairplay</fullName>
                </value>
                <value>
                    <fullName>Cengage KY</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Community of Best Practices</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Delivery Technical</fullName>
                </value>
                <value>
                    <fullName>EMIS (Houston)</fullName>
                </value>
                <value>
                    <fullName>EMS (Gemalto)</fullName>
                </value>
                <value>
                    <fullName>Englewood Physical</fullName>
                </value>
                <value>
                    <fullName>Erights</fullName>
                </value>
                <value>
                    <fullName>Exclusive Analysis</fullName>
                </value>
                <value>
                    <fullName>Fekete</fullName>
                </value>
                <value>
                    <fullName>GIS Delivery</fullName>
                </value>
                <value>
                    <fullName>Global Insight</fullName>
                </value>
                <value>
                    <fullName>Goldfire</fullName>
                </value>
                <value>
                    <fullName>GTA</fullName>
                </value>
                <value>
                    <fullName>International Energy</fullName>
                </value>
                <value>
                    <fullName>JOC</fullName>
                </value>
                <value>
                    <fullName>JOC.com</fullName>
                </value>
                <value>
                    <fullName>JOC PIERS</fullName>
                </value>
                <value>
                    <fullName>NavX</fullName>
                </value>
                <value>
                    <fullName>Online Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoadingGroupOnboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7137: Creating lookup field for Implementation record type. Since there exists another field as Loading group, creating new field with same label, but different API</description>
        <label>Loading Group</label>
        <referenceTo>LoadingGroup__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LostReasonCode__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Lost Reason Code</inlineHelpText>
        <label>Lost Reason Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LostReasonDescription__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Lost Reason Description</inlineHelpText>
        <label>Lost Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManualInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6148 : This field will hold the value of Is this a Manual Invoice
SFDC1-6250: Change field&apos;s name and API name per Bhanu&apos;s request</description>
        <label>Manual Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiyear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Multiyear</inlineHelpText>
        <label>Multiyear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OIDTicket__c</fullName>
        <description>SFDC1-1351: Field to store service now ticket number
SFDC1-4998: Rename of field label OID Ticket # to INC Ticket</description>
        <inlineHelpText>Enter ServiceNow ticket number for the related Outage Incident (INC0123456)</inlineHelpText>
        <label>INC Ticket</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMCaseComments__c</fullName>
        <description>SFDC1-7122: Rename the &quot;OM Resolution Description&quot; field TO &quot;OM Case Comments&quot;</description>
        <inlineHelpText>Order Management Case Comments</inlineHelpText>
        <label>OM Case Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OMDStatus__c</fullName>
        <description>SFDC1-6250 Dependent picklist (controlling field is &quot;Team Select&quot;)</description>
        <label>OMD Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TeamSelect__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Re-Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Clarification</fullName>
                </value>
                <value>
                    <fullName>Pending Documentation</fullName>
                </value>
                <value>
                    <fullName>Waiting on Information - 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Waiting on Information - Customer</fullName>
                </value>
                <value>
                    <fullName>Waiting on Information - Internal</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Resolved - No Delivery Action Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMProcessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6148 : This field will hold OM Processor</description>
        <label>OM Processor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (OM Processor)</relationshipLabel>
        <relationshipName>OMProcessorCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OMRootCause__c</fullName>
        <description>SFDC1-6250 OM Root Cause</description>
        <label>OM Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Decision/Customer Delight</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Order Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectTool__c</fullName>
        <description>SFDC1-8003 
SFDC Helpdesk Objects or tools related to the case.</description>
        <inlineHelpText>Please populate the Object or Tool that the case is related to.</inlineHelpText>
        <label>Object/Tool</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Clicktools</fullName>
                </value>
                <value>
                    <fullName>Compliance &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>Docusign</fullName>
                </value>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Login/password Reset</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Reports/Dashboard</fullName>
                </value>
                <value>
                    <fullName>Salesforce for Outlook</fullName>
                </value>
                <value>
                    <fullName>Salesforce training</fullName>
                </value>
                <value>
                    <fullName>Sandboxes</fullName>
                </value>
                <value>
                    <fullName>SSO</fullName>
                </value>
                <value>
                    <fullName>User profiles</fullName>
                </value>
                <value>
                    <fullName>Validation Rule</fullName>
                </value>
                <value>
                    <fullName>Workflow Rules</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnboardingCaseRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7040 If this checkbox is checked, then it creates an Onboarding case</description>
        <inlineHelpText>Check this box to create an Onboarding case</inlineHelpText>
        <label>Onboarding Case Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperatingSystem__c</fullName>
        <description>SFDC1-2649 : This field will hold the Operating System Name from Additional Case field, used in Email Templates.</description>
        <formula>AdditionalFields__r.OperatingSystems__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operating System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityOwnerFullName__c</fullName>
        <description>SFDC1-5112:  Opportunity Owner full name to be used in email template &quot;MarkitSERV FX Onboarding TradeSTP Ticket&quot;</description>
        <formula>Opportunity__r.Owner.FirstName +&apos; &apos;+Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Owner FullName</label>
        <type>Text</type>
    </fields>
</CustomObject>